<resources>
    <string name="app_name">Autentic</string>

    <string name="foto">foto</string>
    <string name="cerca">cerca</string>
    <string name="refresh">Refresca</string>



    <string name="seguent">Següent</string>
    <string name="anterior">Anterior</string>


    <string name="boto_menu1">EL millor</string>
    <string name="boto_menu2">Nous</string>
    <string name="boto_menu3">Aprop</string>
    <string name="boto_menu4">Seguesc</string>
    <string name="boto_menu5">Jo</string>

    <!-- La secció Seguesc i El millor tendran un desplegable cap aball per poder subtriar més opcions. -->



</resources>
