<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.examnple.biel.autentic.MainActivity">


<!-- quatre quadradets junts:
    <item
        android:id="@+id/action_cerca2"
        android:orderInCategory="10"
        android:title="@string/cerca"
        android:icon="@android:drawable/ic_dialog_dialer"
        app:showAsAction="collapseActionView|always"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:actionLayout="@android:drawable/btn_star_big_on"
        ></item>
-->

    <item android:id="@+id/action_map"
        android:orderInCategory="300"
        android:title="mapa"
        android:icon="@android:drawable/ic_dialog_map"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/action_cerca"
        android:orderInCategory="10"
        android:title="@string/cerca"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|always"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:actionLayout="@android:drawable/btn_star_big_on"
        ></item>



    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        android:title="@string/refresh"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/action_camera"
        android:orderInCategory="200"
        android:title="@string/foto"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="always"></item>


</menu>